        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.5.1   **
        **                                         **
        *********************************************
        
NEW FEATURES

BUG FIXES

    o   Fixed inheritance for packages importing data.table, bug
        #1093. Thanks to Koert Kuipers for reporting.

NOTES


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.5     **
        **                                         **
        *********************************************


NEW FEATURES

    o   data.table now *inherits* from data.frame, for functions and
        packages which _only_ accept data.frame, saving time and
        memory of conversion. A data.table is a data.frame too;
        is.data.frame() now returns TRUE.
    
    o   Integer-based date and time-of-day classes have been 
        introduced. This allows dates and times to be used as keys
        more easily. See as.IDate, as.ITime, and IDateTime.
        Conversions to and from POSIXct, Date, and chron are
        supported.
    
    o   [<-.data.table and $<-.data.table were revised to check for
        changes to the key-ed columns. [<-.data.table also now allows
        data.table-style indexing for i. Both of these changes may
        introduce incompatibilities for existing code.
        
    o   Logical columns are now allowed in keys. Logical columns (and
        expressions that evaluate to logical) are now allowed in 'by'.
        Thanks to David Winsemius for highlighting.
            
        
BUG FIXES

    o   DT[,5] now returns 5 as FAQ 1.1 says, for consistency
        with DT[,c(5)] and DT[,5+0]. DT[,"region"] now returns
        "region" as FAQ 1.2 says. Thanks to Harish V for reporting.
        
    o   When a quote()-ed expression q is passed to 'by' using